--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "font-awesome": "^4.5.0",
+    "image-webpack-loader": "^3.0.0",
     "jquery": "^2.2.2",
     "jquery.scrollto": "^2.1.2",
     "node-sass": "^3.4.2",
