--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "waypoints": "^4.0.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "imagemin": "^5.2.2"
   }
 }
